# akonadimailsearch

./: CMakeLists.txt  README  README.md
src/: CMakeLists.txt  Messages.sh  akonadimailsearch.cpp  akonadimailsearch.desktop  akonadimailsearch.h  main.cpp
